# ModelSentinel

./: .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
apps/web/: README.md  eslint.config.js  index.html  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
apps/web/src/: App.tsx  styles.css  types.ts
apps/web/src/charts/: DistributionChart.tsx  PsiTrendChart.tsx  chartSetup.ts
apps/web/src/components/: AiAnalysisPanel.tsx  AlertLog.tsx  ChartsPanel.tsx  FeatureTable.tsx  RetrainModal.tsx  SummaryCards.tsx  TopBar.tsx
apps/web/src/lib/: dashboard.ts  mockApi.ts
apps/web/src/mocks/: demoData.ts
data/samples/: README.md
docs/: architecture.md  demo-script.md  deployment.md  project-analysis.md  roadmap.md
ml/: README.md
ml/evaluation/: metrics.py
ml/features/: credit_risk.py
ml/models/: CreditRisk_v2.1.json  CreditRisk_v2.2.json  logistic_regression.py  model_registry.json
ml/pipelines/: retrain.py
scripts/: bootstrap.sh  check_all.sh
services/api/: README.md  pyproject.toml
services/api/app/: main.py
services/api/app/api/: routes.py
services/api/app/schemas/: dashboard.py
services/api/app/services/: dashboard_state.py
services/monitoring/: README.md
services/monitoring/drift/: metrics.py
services/monitoring/jobs/: drift_snapshot.py
services/monitoring/simulator/: engine.py  synthetic_data.py
tests/api/: test_api.py
tests/monitoring/: __init__.py  test_engine.py  test_metrics.py
