[project]
name = "modelsentinel-api"
version = "0.1.0"
description = "FastAPI backend for ModelSentinel"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "httpx>=0.27.0"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
